fix: ensure that the line numbers are hidden on printouts while the code is automa. wrapped

--- a/src/sass/_highlight.scss
+++ b/src/sass/_highlight.scss
@@ -1,12 +1,4 @@
 /*
-OVERIDE THE STANDARD THEME TO MATCH THE HLJS BACKGROUND
-*/
-pre .lines {
-  background: #232323!important;
-  border-right-color: #303439!important;
-}
-
-/*
 Railscasts-like style (c) Visoft, Inc. (Damien White)
 */
 
